@@ -55,22 +55,20 @@ proc host_info { op args } {
     return [eval "board_info host \"$op\" $args"]
 }
 
-# Fill in ENTRY with VALUE for the current board being defined.
+# Set ENTRY to VALUE for the current board.
 #
 proc set_board_info { entry value } {
     global board_info board
-
     if {![info exists board_info($board,$entry)]} {
 	set board_info($board,$entry) $value
     }
 }
 
 #
-# Add VALUE to ENTRY for the current board being defined.
+# Append VALUE to ENTRY for the current board.
 #
 proc add_board_info { entry value } {
     global board_info board
-
     lappend board_info($board,$entry) $value
 }
 
